--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -99,8 +99,5 @@
       "`"
     ]
   },
-  "cSpell.words": [
-    "submenu",
-    "uuidv"
-  ]
+  "cSpell.words": ["submenu", "upsert", "uuidv"]
 }
